--- a/Lecture1.slides.html
+++ b/Lecture1.slides.html
@@ -12250,7 +12250,7 @@ a.anchor-link {
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>These are good advice, but quite superficial.</p>
 <ul>
-<li>all of them have been ingored, even in extremely successful projects</li>
+<li>all of them have been ignored, even in extremely successful projects</li>
 <li>they are usually not the critical differentiator between successes and failures</li>
 </ul>
 
