--- a/Lecture1.slides.html
+++ b/Lecture1.slides.html
@@ -12243,25 +12243,29 @@ a.anchor-link {
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="Best-advice-for-the-real-world:">Best advice for the real world:<a class="anchor-link" href="#Best-advice-for-the-real-world:">&#182;</a></h2><p>by Paul Phillips "We're doing it all wrong":</p>
 <p>(quoting George Orwell's 1984)</p>
-<ul>
-<li>War is peace<ul>
+
+</div>
+</div>
+</div></section><section>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h4 id="War-is-peace">War is peace<a class="anchor-link" href="#War-is-peace">&#182;</a></h4><ul>
 <li>Fight your war at the boundary so that you can have peace within</li>
 <li>Challenge your clients to reduce the scope of your deliverable</li>
 <li>Define a minimal set of interactions to the outside world</li>
 </ul>
-</li>
-<li>Ignorance is strength<ul>
+<h4 id="Ignorance-is-strength">Ignorance is strength<a class="anchor-link" href="#Ignorance-is-strength">&#182;</a></h4><ul>
 <li>Design dumb modules that only do one thing</li>
 <li>Keep it simple and stupid</li>
 <li>Separation of concerns, modular</li>
 </ul>
-</li>
-<li>Freedom is slavery<ul>
+<h4 id="Freedom-is-slavery">Freedom is slavery<a class="anchor-link" href="#Freedom-is-slavery">&#182;</a></h4><ul>
 <li>Must be disciplined in testing, code review, releases etc. </li>
 <li>Limit the interface of your module (or external commitments)</li>
 <li>Freedom $\rightarrow$ possibilities $\rightarrow$ complexity $\rightarrow$ unmodifiable code $\rightarrow$ slavery</li>
-</ul>
-</li>
 </ul>
 
 </div>
@@ -12272,7 +12276,7 @@ a.anchor-link {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="The-art-of-modeling">The art of modeling<a class="anchor-link" href="#The-art-of-modeling">&#182;</a></h2><p>Sun Tzu (孙子): "the supreme art of quant modeling is to solve problems without coding"</p>
+<h2 id="Less-is-more">Less is more<a class="anchor-link" href="#Less-is-more">&#182;</a></h2><p>Sun Tzu (孙子): "the supreme art of quant modeling is to solve problems without coding"</p>
 
 </div>
 </div>
