--- a/Lecture1.slides.html
+++ b/Lecture1.slides.html
@@ -14956,7 +14956,7 @@ $$ f'(x) \approx \frac{1}{2h}\left(f(x+h) - f(x-h)\right) $$
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<center><img src = "img/bumpsize.png", height = 400, width = 400></center>
+<h2 id="An-Example-of-Numerical-Delta">An Example of Numerical Delta<a class="anchor-link" href="#An-Example-of-Numerical-Delta">&#182;</a></h2><center><img src = "img/bumpsize.png", height = 600, width = 600></center>
 </div>
 </div>
 </div></section><section>
