--- a/Lecture1.slides.html
+++ b/Lecture1.slides.html
@@ -13428,7 +13428,7 @@ a.anchor-link {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Software-Practices">Software Practices<a class="anchor-link" href="#Software-Practices">&#182;</a></h1><p>Roberto Waltman: In the one and only true way. The object-oriented version of "Spaghetti code" is, of course, "Lasagna code".</p>
+<h1 id="Software-Development-Practices">Software Development Practices<a class="anchor-link" href="#Software-Development-Practices">&#182;</a></h1><p>Roberto Waltman: In the one and only true way. The object-oriented version of "Spaghetti code" is, of course, "Lasagna code".</p>
 
 </div>
 </div>
@@ -14956,7 +14956,8 @@ $$ f'(x) \approx \frac{1}{2h}\left(f(x+h) - f(x-h)\right) $$
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="An-Example-of-Numerical-Delta">An Example of Numerical Delta<a class="anchor-link" href="#An-Example-of-Numerical-Delta">&#182;</a></h2><center><img src = "img/bumpsize.png", height = 600, width = 600></center>
+<h2 id="An-Example-of-Numerical-Delta">An Example of Numerical Delta<a class="anchor-link" href="#An-Example-of-Numerical-Delta">&#182;</a></h2><p>For $f(x) = e^x$ at $x=1$:</p>
+<center><img src = "img/bumpsize.png", height = 600, width = 600></center>
 </div>
 </div>
 </div></section><section>
